# braillify

./: AGENTS.md  CLAUDE.md  README.md  jeomsarang_verify_result.json  package.json
.changepacks/: changepack_log_AXqdTcoYTApTNKx3Ho4Nl.json  changepack_log_GgfQzBMaZfaFDHHk9xR4k.json  changepack_log_Hwhnp6YdFNFGA9VdN6UBZ.json  changepack_log_Jyqdn9XifVmA-ohz2KDSO.json  changepack_log_MXRhDpdCSFICWtWhTp2EC.json  changepack_log_VdloznYAXvDc4K7u-visk.json  changepack_log_ZtO9pur6dk61SjWFX9zq5.json  changepack_log_jLT6p5LX5ld34HoqCabhS.json  changepack_log_lfqbwDoMIwf-fOSPYfpFJ.json  changepack_log_s_nU5lSdph23oTfBwfu8w.json  config.json
.claude/: settings.local.json
.github/workflows/: publish-pypi.yml  publish.yml
apps/landing/: package.json  tsconfig.json
apps/landing/src/app/: layout.tsx
apps/landing/src/app/docs/: OpenMenuItem.tsx  RightIndex.tsx  layout.tsx
apps/landing/src/components/test-case/: TestCaseStat.tsx
braillove-case-collector/: verify.py
libs/braillify/: AGENTS.md  Cargo.toml  build.rs
libs/braillify/src/: lib.rs  main.rs  symbol_shortcut.rs
test_cases/: rule_49.csv  rule_60.csv
