[package]
name = "braillify"
version = "1.0.4"
edition = "2024"
authors = ["JeongMin Oh <owjs39@gmail.com>"]
description = "Rust 기반 크로스플랫폼 한국어 점역 라이브러리"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/braillify"
documentation = "https://braillify.kr"
categories = ["text-processing"]
keywords = ["braillify", "braille", "korean", "translation"]
readme = "../../README.md"
homepage = "https://braillify.kr"

[dependencies]
phf = { version = "0.13", features = ["macros"] }
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }
rustyline = { version = "17", optional = true }
regex = "1"
once_cell = "1"
unicode-normalization = "0.1.25"

[dev-dependencies]
csv = "1.4.0"
serde_json = "^1"
proptest = "1.9"
assert_cmd = "2"
predicates = "3"
escargot = "0.5.15"

[features]
default = ["cli"]
cli = ["clap", "anyhow", "rustyline"]
wasm = []

[[bin]]
name = "braillify"
path = "src/main.rs"
required-features = ["cli"]
